--- a/SinglePage/templates/cards/imi_pre.html
+++ b/SinglePage/templates/cards/imi_pre.html
@@ -38,7 +38,7 @@
 <div class="container" id="card6" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
-            Questionnaire
+            Questionnaire 1
         </div>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="0"
