--- a/SinglePage/templates/eval.html
+++ b/SinglePage/templates/eval.html
@@ -48,6 +48,7 @@
     <div class="row">
         <div class="col-lg-12 text-center">
             <h1 class="mt-5 page-header">List of participants</h1>
+             <a class="btn btn-secondary" href="{% url 'exportCSV' %}">Export all</a>
         </div>
     </div>
 </div>
@@ -55,7 +56,6 @@
 <div class="container">
     <ul class="list-group">
         {% for submission in submissions %}
-{#            <li class="list-group-item">Participant {{ forloop.counter }}: Submission {{ submission.pk }}</li>#}
             <a href="{% url 'showParticipant' submission_id=submission.pk %}" class="list-group-item">
                 Participant {{ forloop.counter }}: Submission {{ submission.pk }}
             </a>
