--- a/SinglePage/templates/cards/start.html
+++ b/SinglePage/templates/cards/start.html
@@ -3,15 +3,13 @@
 </div>
 <div class="card-body">
     <p class="card-text">
-        Thank you for participating in our study. In this survey, we would like to measure your cognitive abilities
-        and our experience while performing the tasks.
-        This survey consists of two parts. In each part, you have to solve 8 cognitive ability tasks, followed by a questionnaire.
-        It will take about 25 minutes to complete the survey. The goal of the study is to identify to which extent your
-        cognitive abilities match your reported experience while performing the tasks.<br><br>
+        Thank you for participating in our study. In this survey, we would like to assess your experience while performing different tasks.
+        This survey consists of two parts. In each part, you have to solve 8 tasks, followed by a questionnaire.
+        It will take about 25 minutes to complete the survey. The goal of the study is to determine your experience while completing the tasks. <br><br>
 
         Your data will be stored and processed anonymously.
         More information on data protection can be found in the <a href="#" data-toggle="modal" data-target="#exampleModal">Data Protection Notice</a>.
-        This survey is being conducted by Julia Schulz as part of a master's thesis at Saarland University.<br><br>
+        This survey is being conducted by Julia Schulz as part of a master's thesis at Saarland University and the German Research Center for Artificial Intelligence (DFKI).<br><br>
 
         <b>Notes on data protection and participation information:</b><br>
     <div class="form-check">
