Questionnaires make label clickable

--- a/SinglePage/templates/cards/panas_main.html
+++ b/SinglePage/templates/cards/panas_main.html
@@ -24,24 +24,24 @@
                         <div class="col-md-9">
                             <ul class='likert panas'>
                                 <li>
-                                    <input type="radio" name="scalePanasMain{{forloop.counter}}" value="1">
-                                    <label>not at all</label>
+                                    <input type="radio" name="scalePanasMain{{forloop.counter}}" value="1" id="scalePanasMain{{forloop.counter}}1">
+                                    <label for="scalePanasMain{{forloop.counter}}1">not at all</label>
                                 </li>
                                 <li>
-                                    <input type="radio" name="scalePanasMain{{forloop.counter}}" value="2">
-                                    <label>a little</label>
+                                    <input type="radio" name="scalePanasMain{{forloop.counter}}" value="2" id="scalePanasMain{{forloop.counter}}2">
+                                    <label for="scalePanasMain{{forloop.counter}}2">a little</label>
                                 </li>
                                 <li>
-                                    <input type="radio" name="scalePanasMain{{forloop.counter}}" value="3">
-                                    <label>moderately</label>
+                                    <input type="radio" name="scalePanasMain{{forloop.counter}}" value="3" id="scalePanasMain{{forloop.counter}}3">
+                                    <label for="scalePanasMain{{forloop.counter}}3">moderately</label>
                                 </li>
                                 <li>
-                                    <input type="radio" name="scalePanasMain{{forloop.counter}}" value="4">
-                                    <label>quite a bit</label>
+                                    <input type="radio" name="scalePanasMain{{forloop.counter}}" value="4" id="scalePanasMain{{forloop.counter}}4">
+                                    <label for="scalePanasMain{{forloop.counter}}4">quite a bit</label>
                                 </li>
                                 <li>
-                                    <input type="radio" name="scalePanasMain{{forloop.counter}}" value="5">
-                                    <label>extremely</label>
+                                    <input type="radio" name="scalePanasMain{{forloop.counter}}" value="5" id="scalePanasMain{{forloop.counter}}5">
+                                    <label for="scalePanasMain{{forloop.counter}}5">extremely</label>
                                 </li>
                             </ul>
                         </div>
