--- a/SinglePage/static/css/style.css
+++ b/SinglePage/static/css/style.css
@@ -68,7 +68,7 @@ h1.likert-header {
     display: block;
     /*font-size: 14px;*/
     font-weight: bold;
-    padding: 15px 0 0 2%;
+    padding: 15px 0 0 0;
     margin-bottom: 10px;
 }
 
