--- a/SinglePage/templates/cards/imi_main.html
+++ b/SinglePage/templates/cards/imi_main.html
@@ -39,8 +39,8 @@
                 <div id="errorIMImain{{ forloop.counter }}" class="error_sub error_question"></div>
                 <ul class='likert'>
                     <li>
-                        <input type="radio" name="scaleMain{{ forloop.counter }}" value="1">
-                        <label>Not true at all</label>
+                        <input type="radio" name="scaleMain{{ forloop.counter }}" value="1" id="scaleMain{{forloop.counter}}1">
+                        <label for="scaleMain{{forloop.counter}}1">Not true at all</label>
                     </li>
                     <li>
                         <input type="radio" name="scaleMain{{ forloop.counter }}" value="2">
@@ -49,8 +49,8 @@
                         <input type="radio" name="scaleMain{{ forloop.counter }}" value="3">
                     </li>
                     <li>
-                        <input type="radio" name="scaleMain{{ forloop.counter }}" value="4">
-                        <label>Somewhat true</label>
+                        <input type="radio" name="scaleMain{{ forloop.counter }}" value="4" id="scaleMain{{forloop.counter}}4">
+                        <label for="scaleMain{{forloop.counter}}4">Somewhat true</label>
                     </li>
                     <li>
                         <input type="radio" name="scaleMain{{ forloop.counter }}" value="5">
@@ -59,8 +59,8 @@
                         <input type="radio" name="scaleMain{{ forloop.counter }}" value="6">
                     </li>
                     <li>
-                        <input type="radio" name="scaleMain{{ forloop.counter }}" value="7">
-                        <label>Very true</label>
+                        <input type="radio" name="scaleMain{{ forloop.counter }}" value="7" id="scaleMain{{forloop.counter}}7">
+                        <label for="scaleMain{{forloop.counter}}7">Very true</label>
                     </li>
                 </ul>
                 {% endfor %}
