--- a/SinglePage/templates/cards/imi_pre.html
+++ b/SinglePage/templates/cards/imi_pre.html
@@ -54,18 +54,20 @@
                     <div id="errorIMIpre{{ forloop.counter }}" class="error_sub error_question"></div>
                     <ul class='likert'>
                         <li>
-                            <input type="radio" name="scalePre{{ forloop.counter }}" value="1">
-                            <label>Not true at all</label>
+                            <input type="radio" name="scalePre{{ forloop.counter }}" value="1" id="scalePre{{forloop.counter}}1">
+                            <label for="scalePre{{forloop.counter}}1">Not true at all</label>
                         </li>
                         <li>
+{#                            <label class="btn btn-lg btn-default">#}
                             <input type="radio" name="scalePre{{ forloop.counter }}" value="2">
+{#                                </label>#}
                         </li>
                         <li>
                             <input type="radio" name="scalePre{{ forloop.counter }}" value="3">
                         </li>
                         <li>
-                            <input type="radio" name="scalePre{{ forloop.counter }}" value="4">
-                            <label>Somewhat true</label>
+                            <input type="radio" name="scalePre{{ forloop.counter }}" value="4" id="scalePre{{forloop.counter}}4">
+                            <label for="scalePre{{forloop.counter}}4">Somewhat true</label>
                         </li>
                         <li>
                             <input type="radio" name="scalePre{{ forloop.counter }}" value="5">
@@ -74,8 +76,8 @@
                             <input type="radio" name="scalePre{{ forloop.counter }}" value="6">
                         </li>
                         <li>
-                            <input type="radio" name="scalePre{{ forloop.counter }}" value="7">
-                            <label>Very true</label>
+                            <input type="radio" name="scalePre{{ forloop.counter }}" value="7" id="scalePre{{forloop.counter}}7">
+                            <label for="scalePre{{forloop.counter}}7">Very true</label>
                         </li>
                     </ul>
                 {% endfor %}
