Increase btn size, add labels and improve mobile style

--- a/SinglePage/templates/cards/end.html
+++ b/SinglePage/templates/cards/end.html
@@ -68,12 +68,14 @@
     <p class="card-text">
         <b style="font-size: 20px">Post-debriefing consent form</b>
         <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="check_debriefing" autocomplete="off">
+            <input type="checkbox" class="form-check-input" id="check_debriefing" autocomplete="off" style="cursor: pointer">
+            <label for="check_debriefing" style="cursor: pointer">
                 I read the post-study information and give my permission for the researchers to use my data
                 and/or the information I provided through the online survey for this study. This includes
                 permission to use all the data I provided: my demographic data, my answers from the questionnaires
                 assessing intrinsic motivation, my answers from the questionnaires assessing the feelings and emotions
-                of doing the tasks as well as my answers from the tasks.<br>
+                of doing the tasks as well as my answers from the tasks.
+            </label>
         </div>
     </p>
     <p class="card-text">
