--- a/SinglePage/templates/cards/start.html
+++ b/SinglePage/templates/cards/start.html
@@ -13,9 +13,12 @@
 
         <b>Notes on data protection and participation information:</b><br>
     <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="checkbox" autocomplete="off"> I have read and understood the
-        <a href="#" data-toggle="modal" data-target="#exampleModal">notes on data protection</a> and the participation information and agree
-        that my data may be used anonymously for scientific research purposes. <br>
+        <input type="checkbox" class="form-check-input" id="checkbox" autocomplete="off" style="cursor: pointer">
+        <label for="checkbox" style="cursor: pointer">
+            I have read and understood the
+            <a href="#" data-toggle="modal" data-target="#exampleModal">notes on data protection</a>
+            and the participation information and agree that my data may be used anonymously for scientific research purposes.
+        </label>
     </div>
 
     </p>
