--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -20,14 +20,14 @@
                     <!--Positive Framing-->
                     Thank you for your answers so far. Number of correctly answered tasks in the last round:
                     <br>
-                    <b style="color: #006dcc; font-size: 21px">7 out of 8</b> tasks
+                    <b style="color: #006dcc; font-size: 21px">7 out of 8</b> tasks <b>correct</b>
                     <br>
                 {% endif %}
                 {% if framing == 2 %}
                     <!--Negative Framing-->
                     Thank you for your answers so far. Number of correctly answered tasks in the last round:
                     <br>
-                    <b style="color: #006dcc; font-size: 21px">2 out of 8</b> tasks
+                    <b style="color: #006dcc; font-size: 21px">2 out of 8</b> tasks <b>correct</b>
                     <br>
                 {% endif %}
             </p>
@@ -55,13 +55,13 @@
                 {% if framing == 1 %}
                     <!--Positive Framing-->
                     <div class="sticky9">
-                        Correct 1<sup>st</sup> round: 7/8
+                        Correct answers 1<sup>st</sup> round: 7/8
                     </div>
                 {% endif %}
                 {% if framing == 2 %}
                     <!--Negative Framing-->
                     <div class="sticky9">
-                        Correct 1<sup>st</sup> round: 2/8
+                        Correct answers 1<sup>st</sup> round: 2/8
                     </div>
                 {% endif %}
             </div>
@@ -123,13 +123,13 @@
                {% if framing == 1 %}
                    <!--Positive Framing-->
                    <div class="sticky10">
-                       Correct 1<sup>st</sup> round: 7/8
+                       Correct answers 1<sup>st</sup> round: 7/8
                    </div>
                {% endif %}
                {% if framing == 2 %}
                    <!--Negative Framing-->
                    <div class="sticky10">
-                       Correct 1<sup>st</sup> round: 2/8
+                       Correct answers 1<sup>st</sup> round: 2/8
                    </div>
                {% endif %}
             </div>
