--- a/SinglePage/templates/data_protection.html
+++ b/SinglePage/templates/data_protection.html
@@ -46,9 +46,9 @@
 
         <b>Contact persons</b><br><br>
 
-        The DFKI is responsible for conducting this study. The contact person at DFKI is Maximilian Altmeyer (maximilian.altmeyer@dfki.de).
+        The contact persons are Julia Schulz (s8juschu@stud.uni-saarland.de) and Maximilian Altmeyer (maximilian.altmeyer@dfki.de).
         If you have any questions that are not answered in this privacy statement or would like further information on
-        data protection, please contact our data protection officer (datenschutz@dfki.de).<br><br>
+        data protection, please contact us.<br><br>
 
         <b>Right of complaint</b><br><br>
 
