--- a/SinglePage/templates/legal_notice.html
+++ b/SinglePage/templates/legal_notice.html
@@ -1,47 +1,10 @@
 <p class="abouttext">
-    <b>Deutsches Forschungszentrum für Künstliche Intelligenz GmbH, DFKI</b> <br><br>
+    <b>Julia Schulz</b> <br><br>
 
-    <b>E-Mail Kontakt:</b> <br>
+    <b>E-Mail:</b> <br>
     s8juschu@stud.uni-saarland.de <br><br>
 
-    <b>Briefadresse</b><br>
-    Postfach 20 80<br>
-    D-67608 Kaiserslautern<br><br>
-
-    <b>Standort Kaiserslautern</b><br>
-    Trippstadter Straße 122<br>
-    D-67663 Kaiserslautern<br>
-    Telefon: +49 (0)631 / 205 75-0<br>
-    Telefax: +49 (0)631 / 205 75-5030<br><br>
-
-    <b>Standort Saarbrücken</b><br>
-    Campus D3_2<br>
-    Stuhlsatzenhausweg 3<br>
-    D-66123 Saarbrücken<br>
-    Telefon: +49 (0)681 / 857 75-0<br>
-    Telefax: +49 (0)681 / 857 75-5341<br><br>
-
-    <b>Standort Bremen</b><br>
-    Robert-Hooke-Straße 1<br>
-    D-28359 Bremen<br>
-    Telefon: +49 (0)421 / 178 45-0<br>
-    Telefax: +49 (0)421 / 178 45-4150<br><br>
-
-    <b>DFKI Projektbüro Berlin</b><br>
-    Alt-Moabit 91c<br>
-    D-10559 Berlin<br>
-    Tel: +49 (0)30 / 238 95-0<br><br>
-
-    <b>Vertretungsberechtigte Geschäftsführer</b><br>
-    Prof. Dr. Antonio Krüger (Vorsitzender)<br>
-    Helmut Ditzer<br><br>
-
-    <b>Vorsitzender des Aufsichtsrates</b><br>
-    Dr. Gabriël Clemens<br><br>
-
-    Registergericht:Amtsgericht Kaiserslautern<br>
-    Registernummer: HRB 2313<br><br>
-
-    ID-Nummer: DE 148 646 973<br><br>
-
+    <b>Address:</b><br>
+    Robert-Koch-Str. 9<br>
+    D-66132 Saarbrücken<br><br>
 </p>
