--- a/SinglePage/static/css/style.css
+++ b/SinglePage/static/css/style.css
@@ -28,11 +28,13 @@ footer {
 }
 
 .btn-accept-terms {
+    cursor: pointer;
     color: white !important;
     background-color: #004B8B;
 }
 
 .btn-next {
+    cursor: pointer;
     color: white !important;
     background-color: #004B8B;
 }
@@ -59,6 +61,69 @@ footer {
 }
 
 /*Scales*/
+label>input{
+    cursor: pointer;
+}
+
+@media only screen and (min-width: 992px) {
+    .scaleIMI {
+        border: 0px;
+        width: 13%;
+        height: 1em;
+    }
+
+    .wrap .likert:before {
+        width: 81%;
+    }
+}
+
+@media only screen and (max-width: 991px) and (min-width: 768px) {
+    .wrap .likert:before {
+        width: 82%;
+    }
+
+    .wrap .statement {
+        font-size: 17px;
+    }
+
+    .wrap .likert {
+        font-size: 15px !important;
+    }
+}
+
+@media only screen and (max-width: 767px) and (min-width: 535px) {
+    .wrap .likert:before {
+        width: 82%;
+    }
+
+    .wrap .statement {
+        font-size: 15px;
+    }
+
+    .wrap .likert {
+        font-size: 12.5px !important;
+    }
+}
+
+@media only screen and (max-width: 534px) {
+    .wrap .likert:before {
+        width: 86%;
+    }
+
+    .wrap .statement {
+        font-size: 14px;
+    }
+
+    .wrap .likert {
+        font-size: 12px !important;
+    }
+}
+
+.imiLabel{
+    display: inline-block;
+    cursor: pointer;
+}
+
 h1.likert-header {
     padding-left: 4.25%;
     margin: 20px 0 0;
@@ -66,26 +131,14 @@ h1.likert-header {
 
 .wrap .statement {
     display: block;
-    /*font-size: 14px;*/
     font-weight: bold;
     padding: 15px 0 0 0;
     margin-bottom: 10px;
 }
 
-@media only screen and (max-width: 768px) {
-    .wrap .statement {
-        font-size: 14px;
-    }
-
-    .wrap .likert:before {
-        width: 83% !important;
-    }
-}
-
 .wrap .likert {
     list-style: none;
     width: 100%;
-    /*font-size:12px;*/
     margin: 0;
     padding: 0 0 15px;
     display: block;
@@ -104,7 +157,6 @@ h1.likert-header {
     display: block;
     background-color: #efefef;
     height: 4px;
-    width: 80%;
 }
 
 .wrap .panas:before {
