--- a/SinglePage/templates/cards/panas_pre.html
+++ b/SinglePage/templates/cards/panas_pre.html
@@ -1,4 +1,4 @@
-<div class="container" id="card7" style="display: none;">
+<div class="container"  name="panas_pre"  id="card7" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
             Questionnaire 1
@@ -19,31 +19,41 @@
                 <div class="container">
                     {% for item in panas %}
                     <div class="row">
-                        <div class="col-md-3" style="margin-right: -8% !important; padding-left: 0% !important">
+                        <div class="col-lg-3" style="margin-right: -8% !important; padding-left: 0% !important">
                             <div id="errorPANASpre{{ forloop.counter }}" class="error_sub error_question"></div>
                             <b>{{forloop.counter}}. {{item}}</b>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-lg-9">
                             <ul class='likert panas'>
                                 <li>
-                                    <input type="radio" name="scalePanasPre{{forloop.counter}}" value="1" id="scalePanasPre{{forloop.counter}}1">
-                                    <label for="scalePanasPre{{forloop.counter}}1">not at all</label>
+                                    <label class="imiLabel">
+                                        <input type="radio" name="scalePanasPre{{forloop.counter}}" value="1" id="scalePanasPre{{forloop.counter}}1">
+                                        not at all
+                                    </label>
                                 </li>
                                 <li>
-                                    <input type="radio" name="scalePanasPre{{forloop.counter}}" value="2" id="scalePanasPre{{forloop.counter}}2">
-                                    <label for="scalePanasPre{{forloop.counter}}2">a little</label>
+                                    <label class="imiLabel">
+                                        <input type="radio" name="scalePanasPre{{forloop.counter}}" value="2" id="scalePanasPre{{forloop.counter}}2">
+                                        a little
+                                    </label>
                                 </li>
                                 <li>
-                                    <input type="radio" name="scalePanasPre{{forloop.counter}}" value="3" id="scalePanasPre{{forloop.counter}}3">
-                                    <label for="scalePanasPre{{forloop.counter}}3">moderately</label>
+                                    <label class="imiLabel">
+                                        <input type="radio" name="scalePanasPre{{forloop.counter}}" value="3" id="scalePanasPre{{forloop.counter}}3">
+                                        moderately
+                                    </label>
                                 </li>
                                 <li>
-                                    <input type="radio" name="scalePanasPre{{forloop.counter}}" value="4" id="scalePanasPre{{forloop.counter}}4">
-                                    <label for="scalePanasPre{{forloop.counter}}4">quite a bit</label>
+                                    <label class="imiLabel">
+                                        <input type="radio" name="scalePanasPre{{forloop.counter}}" value="4" id="scalePanasPre{{forloop.counter}}4">
+                                        quite a bit
+                                    </label>
                                 </li>
                                 <li>
-                                    <input type="radio" name="scalePanasPre{{forloop.counter}}" value="5" id="scalePanasPre{{forloop.counter}}5">
-                                    <label for="scalePanasPre{{forloop.counter}}5">extremely</label>
+                                    <label class="imiLabel">
+                                        <input type="radio" name="scalePanasPre{{forloop.counter}}" value="5" id="scalePanasPre{{forloop.counter}}5">
+                                        extremely
+                                    </label>
                                 </li>
                             </ul>
                         </div>
